# OpenWeatherRust

./: README.md
open_weather/: Cargo.toml
open_weather/src/: main.rs  weather.rs
