[package]
name = "open_weather"
version = "0.1.0"
authors = ["Bojidar Qnkov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.48"
hyper = "0.13.3"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
